--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "format": "prettier --write ."
   },
   "devDependencies": {
+    "@types/chrome": "^0.0.287",
     "prettier": "^3.2.5",
     "prettier-plugin-svelte": "^3.2.2",
+    "sveltekit-adapter-chrome-extension": "^2.0.1",
     "turbo": "^2.3.3"
   },
   "packageManager": "pnpm@8.15.6",
