--- a/apps/vision-guard/static/manifest.json
+++ b/apps/vision-guard/static/manifest.json
@@ -15,7 +15,7 @@
   ],
   "action": {
     "default_title": "Vision Guard 119",
-    "default_popup": "index.html"
+    "default_popup": "popup.html"
   },
   "declarative_net_request": {
     "rule_resources": [
@@ -35,5 +35,14 @@
         "path": "rules_3.json"
       }
     ]
+  },
+  "web_accessible_resources": [
+    {
+      "resources": ["index.html"],
+      "matches": ["<all_urls>"]
+    }
+  ],
+  "content_security_policy": {
+    "extension_pages": "script-src 'self'; object-src 'self'"
   }
 }
