--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -15,6 +15,8 @@
   },
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
-    "svelte": "^4.2.12"
+    "svelte": "^5.16.2",
+    "@sveltejs/kit": "^2.0.0",
+    "typescript": "^5.0.0"
   }
 }
