Update vision guard packages

--- a/apps/vision-guard/static/manifest.json
+++ b/apps/vision-guard/static/manifest.json
@@ -8,7 +8,9 @@
     "webNavigation",
     "storage",
     "declarativeNetRequest",
-    "declarativeNetRequestWithHostAccess"
+    "declarativeNetRequestWithHostAccess",
+    "management",
+    "notifications"
   ],
   "host_permissions": [
     "<all_urls>"
@@ -44,5 +46,9 @@
   ],
   "content_security_policy": {
     "extension_pages": "script-src 'self'; object-src 'self'"
+  },
+  "incognito": "split",
+  "background": {
+    "service_worker": "background.js"
   }
 }
